--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
